--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,7 @@ img {
     height: 100vh; /* Define a altura da div como a altura do viewport */
     overflow-y: auto; /* Adiciona a barra de rolagem vertical quando necessário */
 }
+
+/*
+Icon eye password
+*/
