--- a/css/output.css
+++ b/css/output.css
@@ -636,6 +636,10 @@ video {
   z-index: 99;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
@@ -671,6 +675,10 @@ video {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-48 {
+  margin-left: 12rem;
 }
 
 .mr-3 {
@@ -808,6 +816,15 @@ video {
   width: 100%;
 }
 
+.w-min {
+  width: -moz-min-content;
+  width: min-content;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
 .min-w-\[100\%\] {
   min-width: 100%;
 }
@@ -902,6 +919,11 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1002,12 +1024,24 @@ video {
   padding: 1.5rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .align-top {
